# SakikoBot

./: .gitignore  LICENSE  README.md  pyproject.toml
sakikobot/plugins/anime_subs/: __init__.py  readme.md  subs.py  url_functions.py
sakikobot/plugins/args_decoder/: __init__.py
sakikobot/plugins/forward_msg/: __init__.py  forward_msg_functions.py
sakikobot/plugins/help_pic/: __init__.py  config.py  draw.py  md2img.py  readme.md
sakikobot/plugins/keyword_answer/: __init__.py  config.py  keyword_answer_lexicon.toml  lexicon_functions.py
sakikobot/plugins/setu/: __init__.py  config.py  pics.py  sese.py
